i shoul add like crud and make api and swagger on this blog project
